# pjecz-plataforma-web-api-new

./: .gcloudignore  .gitignore  Dockerfile  README.md  app.yaml  pyproject.toml  requirements.txt
.github/workflows/: gcloud-app-deploy.yml
config/: settings.py
http-client/: abogados.http  audiencias.http  autoridades.http  distritos.http  domicilios.http  edictos.http  epocas.http  glosas.http  listas_de_acuerdos.http  materias.http  materias_tipos_juicios.http  modulos.http  oficinas.http  peritos.http  peritos_tipos.http  redam.http  repsvm_gresores.http  roles.http  sentencias.http  tesis_jurisprudencias.http  ubicaciones_expedientes.http  usuarios.http
lib/: authentications.py  database.py  fastapi_pagination_custom_list.py  fastapi_pagination_custom_page.py  fastapi_pagination_datatable.py  limiter.py  safe_string.py  schemas_base.py  universal_mixin.py
plataforma_web/: app.py
plataforma_web/core/abogados/: models.py
plataforma_web/core/audiencias/: models.py
plataforma_web/core/autoridades/: models.py
plataforma_web/core/distritos/: models.py
plataforma_web/core/edictos/: models.py
plataforma_web/core/epocas/: models.py
plataforma_web/core/glosas/: models.py
plataforma_web/core/listas_de_acuerdos/: models.py
plataforma_web/core/materias/: models.py
plataforma_web/core/materias_tipos_juicios/: models.py
plataforma_web/core/peritos/: models.py
plataforma_web/core/peritos_tipos/: models.py
plataforma_web/core/redam/: models.py
plataforma_web/core/redams/: models.py
plataforma_web/core/repsvm_agresores/: models.py
plataforma_web/core/sentencias/: models.py
plataforma_web/core/tesis_jurisprudencias/: models.py
plataforma_web/core/ubicaciones_expedientes/: models.py
plataforma_web/v3/abogados/: crud.py  paths.py  schemas.py
plataforma_web/v3/audiencias/: crud.py  paths.py  schemas.py
plataforma_web/v3/autoridades/: crud.py  paths.py  schemas.py
plataforma_web/v3/distritos/: crud.py  paths.py  schemas.py
plataforma_web/v3/edictos/: crud.py  paths.py  schemas.py
plataforma_web/v3/epocas/: crud.py  paths.py  schemas.py
plataforma_web/v3/glosas/: crud.py  paths.py  schemas.py
plataforma_web/v3/listas_de_acuerdos/: crud.py  paths.py  schemas.py
plataforma_web/v3/materias/: crud.py  paths.py  schemas.py
plataforma_web/v3/materias_tipos_juicios/: crud.py  paths.py  schemas.py
plataforma_web/v3/peritos/: crud.py  paths.py  schemas.py
plataforma_web/v3/peritos_tipos/: crud.py  paths.py  schemas.py
plataforma_web/v3/redam/: crud.py  paths.py  schemas.py
plataforma_web/v3/redams/: crud.py  paths.py  (+1 more)
rest-client/: README.md  abogados.rest  audiencias.rest  autoridades.rest  catalogos.rest  distritos.rest  edictos.rest  glosas.rest  listas_de_acuerdos.rest  materias.rest  peritos.rest  redam.rest  redams.rest  repsvm_agresores.rest  sentencias.rest  tesis_jurisprudencias.rest  ubicaciones_expedientes.rest
tests/: README.md  list-secrets.py  load_env.py  test_abogados.py  test_audiencias.py  test_autoridades.py  test_distritos.py  test_edictos.py  test_epocas.py  test_glosas.py  test_listas_de_acuerdos.py  test_materias.py  test_materias_tipos_juicios.py  test_peritos.py  test_peritos_tipos.py  test_redam.py  test_repsvm.py  test_repsvm_agresores.py  test_sentencias.py  test_tesis_jurisprudencias.py  test_ubicaciones_expedientes.py
(+12 files in other folders)
