[tool.poetry]
name = "pjecz-plataforma-web-api"
version = "0.1.0"
description = "API de Plataforma Web para brindar datos al sitio web."
authors = ["Guillermo Valdes <guillermo.valdes@pjecz.gob.mx>"]
license = "AGPL3"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^41.0.1"
fastapi = "^0.95.0"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.11.4"}
google-auth = "^2.16.2"
google-cloud = "^0.34.0"
google-cloud-secret-manager = "^2.16.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
python-dotenv = "^1.0.0"
pydantic = "^1.10.6"
pytz = "^2022.7.1"
SQLAlchemy = "^2.0.7"
SQLAlchemy-Utils = "^0.40.0"
Unidecode = "^1.3.6"
uvicorn = "^0.21.1"
slowapi = "^0.1.8"
redis = "^4.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pylint = "^2.17.4"
pylint-sqlalchemy = "^0.2.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 256

[tool.isort]
line_length = 256
profile = "black"
