[tool.poetry]
name = "pjecz-plataforma-web-api-new"
version = "1.1.0"
description = "API que proporciona la información pública para el sitio web."
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^43.0.1"
fastapi = "^0.115.0"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.12.27"}
google-auth = "^2.34.0"
google-cloud = "^0.34.0"
google-cloud-secret-manager = "^2.20.2"
gunicorn = "^23.0.0"
pytz = "^2024.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
slowapi = "^0.1.9"
sqlalchemy = "^2.0.35"
sqlalchemy-utils = "^0.41.2"
unidecode = "^1.3.8"
uvicorn = "^0.30.6"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"
pylint = "^3.2.7"
pylint-sqlalchemy = "^0.3.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
