[tool.poetry]
name = "pjecz-plataforma-web-api-new"
version = "2.1.0"
description = "API que proporciona datos para las consultas del sitio web."
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^43.0.1"
fastapi = "^0.115.0"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.12.28"}
google-auth = "^2.35.0"
google-cloud = "^0.34.0"
google-cloud-secret-manager = "^2.20.2"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
pytz = "^2024.2"
python-dotenv = "^1.0.1"
redis = "^5.0.8"
slowapi = "^0.1.9"
sqlalchemy = "^2.0.35"
sqlalchemy-utils = "^0.41.2"
unidecode = "^1.3.8"
uvicorn = "^0.31.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"
pylint = "^3.3.1"
pylint-sqlalchemy = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
